kubernetes/apps/default/anchor/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: anchor
spec:
  selector:
    app: anchor
  ports:
    - name: http
      port: 80
      targetPort: http
