kubernetes/apps/default/anchor/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anchor
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - anchor.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: anchor
          port: 80
